--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "chainlink-oracle-market-adapter",
   "version": "1.0.0",
-  "author": "Anyblock Analytics GmbH",
+  "author": "Anyblock Analytics GmbH <tech@anyblockanalytics.com>",
   "description": "",
   "license": "MIT",
   "scripts": {},
   "dependencies": {
-    "request": "^2.88.0"
+    "request": "2.88.0"
   },
   "devDependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.0"
+    "body-parser": "1.19.0",
+    "express": "4.17.1"
   }
 }
