--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "author": "Anyblock Analytics GmbH <tech@anyblockanalytics.com>",
   "description": "",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "test": "./node_modules/.bin/_mocha --timeout 0"
+  },
   "dependencies": {
     "request": "^2.88.2",
     "request-promise": "^4.2.5"
