--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "test": "./node_modules/.bin/_mocha --timeout 0"
   },
   "dependencies": {
-    "request": "^2.88.2",
-    "request-promise": "^4.2.5"
+    "request": "2.88.2",
+    "request-promise": "4.2.5"
   },
   "devDependencies": {
     "body-parser": "1.19.0",
-    "chai": "^4.2.0",
+    "chai": "4.2.0",
     "express": "4.17.1",
-    "mocha": "^7.1.1"
+    "mocha": "7.1.1"
   }
 }
